# zerotube

.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/migrations/2019-07-01-081854_users/: up.sql
backend/migrations/2019-07-01-081936_confirmation_emails/: down.sql  up.sql
backend/migrations/2019-07-08-121416_rooms/: up.sql
backend/migrations/2019-07-22-115845_rooms/: up.sql
backend/migrations/2019-07-25-145447_room_media_and_sources/: down.sql  up.sql
backend/src/: auth.rs  main.rs  messages.rs  room_server.rs  rooms.rs
backend/src/controllers/: auth.rs  media.rs  mod.rs  rooms.rs
backend/src/db/: media.rs  mod.rs  rooms.rs  schema.rs  users.rs
backend/src/db/entities/: confirmation_email.rs  mod.rs  room.rs  room_media.rs  source.rs  user.rs
backend/src/messages/: auth.rs  error.rs  media.rs  mod.rs  room.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: media.rs  mod.rs  room.rs  user.rs
backend/src/services/: duration.rs  media.rs  media_apis.rs  mod.rs  passwords.rs
backend/src/ws/: mod.rs  room_session.rs  time.rs
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.css  index.tsx
frontend/src/auth/: auth.tsx  login.tsx  logout.tsx  register.tsx
frontend/src/auth/components/: login.tsx  logout.tsx  register.tsx
frontend/src/confirm-register/: confirm-register.tsx
frontend/src/error/: error401.tsx  error404.tsx
frontend/src/messages/: auth.ts  error.ts  login.ts  media.ts  register.ts  room.ts  user.ts
frontend/src/navbar/: navbar.tsx
frontend/src/room/: room.tsx
frontend/src/rooms/: rooms.tsx
frontend/src/rooms-list/: room-row.tsx  rooms-list.tsx
frontend/src/static/styles/: bulmaswatch-cyborg.scss  overrides.scss  style.scss  variables.scss
frontend/src/time/: time.tsx
frontend/src/util/: fetch-error.ts  fetch-error.tsx
