[package]
name = "zerotube-backend"
version = "0.1.0"
authors = ["zoewithabang <zoewithabang@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-cors = "0.1.0"
actix-redis = "0.6.1"
actix-rt = "0.2.4"
actix-service = "0.4.1"
actix-session = "0.2.0"
actix-web = "1.0.5"
actix-web-actors = "1.0.2"
argon2rs = "0.2.5"
chrono = { version = "0.4.7", features = ["serde"] }
derive_more = "0.15.0"
diesel = { version = "1.4.2", features = ["chrono", "r2d2", "sqlite", "uuid"] }
dotenv = "0.14.1"
env_logger= "0.6.2"
futures = "0.1.28"
log = "0.4.7"
r2d2 = "0.8.5"
rand = "0.7.0"
serde = { version = "1.0.97", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
