[package]
name = "zerotube-backend"
version = "0.1.0"
authors = ["zoewithabang <zoewithabang@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-cors = "0.1.0"
actix-redis = "0.6.1"
actix-service = "0.4.2"
actix-session = "0.2.0"
actix-web = { version = "1.0.7", features = ["rust-tls"] }
actix-web-actors = "1.0.2"
argon2rs = "0.2.5"
chrono = { version = "0.4.9", features = ["serde"] }
derive_more = "0.15.0"
diesel = { version = "1.4.2", features = ["chrono", "r2d2", "sqlite", "uuid"] }
dotenv = "0.14.1"
env_logger= "0.6.2"
futures = "0.1.29"
iso8601 = { git = "https://github.com/badboy/iso8601", branch = "master" }
log = "0.4.8"
r2d2 = "0.8.5"
rand = "0.7.0"
regex = "1.3.1"
reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "master" }
rustls = { version = "0.15.2", features = ["dangerous_configuration"] } #0.16.0 conflicts on actix-http, ring
serde = { version = "1.0.100", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
